tests/expectations/parser/structs/comma_separators_fail.out
Error [EPAR0370047]: expected ','
    --> test:9:5
     |
   9 |     y: u8
     |     ^
